Fixed pool name one more time

--- a/builds/misc/templates/mqtt-perf-test-case.yaml
+++ b/builds/misc/templates/mqtt-perf-test-case.yaml
@@ -33,6 +33,7 @@ jobs:
 
 - job: "run_pub_${{ parameters['id'] }}"
   pool:
+    name: $(pool.name)
     demands: mqtt-perf-tests-pub
   displayName: Test Case Pub ${{ parameters['publishers'] }}p / ${{ parameters['subscribers'] }}s / ${{ parameters['topics'] }}t / ${{ parameters['payload'] }}b / QoS${{ parameters['qos'] }}
   dependsOn: ${{ parameters['parentJob'] }}
@@ -50,6 +51,7 @@ jobs:
 
 - job: "run_sub_${{ parameters['id'] }}"
   pool:
+    name: $(pool.name)
     demands: mqtt-perf-tests-sub
   displayName: Test Case Sub ${{ parameters['publishers'] }}p / ${{ parameters['subscribers'] }}s / ${{ parameters['topics'] }}t / ${{ parameters['payload'] }}b / QoS${{ parameters['qos'] }}
   dependsOn: ${{ parameters['parentJob'] }}
