--- a/builds/misc/templates/mqtt-perf-setup.yaml
+++ b/builds/misc/templates/mqtt-perf-setup.yaml
@@ -4,6 +4,7 @@
 jobs:
 - job: setup_host
   pool:
+    name: $(pool.name)
     demands: mqtt-perf-tests-pub
   displayName: Setup Host
   steps:
@@ -31,6 +32,7 @@ jobs:
 
 - job: setup_pub
   pool:
+    name: $(pool.name)
     demands: mqtt-perf-tests-pub
   displayName: Setup Publisher
   dependsOn: setup_host
@@ -54,6 +56,7 @@ jobs:
 
 - job: setup_sub
   pool:
+    name: $(pool.name)
     demands: mqtt-perf-tests-sub
   displayName: Setup Subscriber
   dependsOn: setup_host
