Use publisher for cleanup.

--- a/builds/misc/templates/mqtt-perf-test-case.yaml
+++ b/builds/misc/templates/mqtt-perf-test-case.yaml
@@ -67,6 +67,9 @@ jobs:
     continueOnError: true 
 
 - job: "run_completed_${{ parameters['id'] }}"
+  pool:
+    name: $(pool.name)
+    demands: mqtt-perf-tests-sub
   displayName: Cleanup
   dependsOn:   
   - "run_sub_${{ parameters['id'] }}"
