--- a/builds/ci/mqtt.yaml
+++ b/builds/ci/mqtt.yaml
@@ -1,16 +1,11 @@
 trigger: none
-pr:
-  branches:
-    include:
-      - master
-      - release/*
 jobs:
   ################################################################################
   - job: compliance_amd64
     ################################################################################
     displayName: Compliance amd64
     pool:
-      vmImage: "ubuntu-latest"
+      vmImage: "ubuntu-16.04"
     steps:
       - script: echo "##vso[task.setvariable variable=RUST_BACKTRACE;]1"
         displayName: Set env variables
