--- a/builds/misc/mqtt-perf.yaml
+++ b/builds/misc/mqtt-perf.yaml
@@ -5,10 +5,13 @@
 # - setup job for publisher node and subscriber node (mqtt-benchmark tool writen in go). See templates/mqtt-perf-setup.yaml
 # - a set of test cases. See templates/mqtt-perf-test-case.yaml.
 
-# Pipeline requires custom agent pool with at least two physical agents:
+# Pipeline requires custom agent pool (defined in $(pool.name)) 
+# with at least two separate agents:
 # - with 'mqtt-perf-tests-pub' demand - for publisher node
 # - with 'mqtt-perf-tests-sub' demand - for subscriber node
-# And a SSH service connection `iotedge-mqtt-perf-conn` for the test host machine 
+# And two SSH service connections for AMD64 and ARM32 test hosts:
+#  - $(broker.sshconnection.amd64)
+#  - $(broker.sshconnection.arm32v7)
 # to manage and run 'mqttd' docker container there.
 
 trigger: none
@@ -33,6 +36,7 @@ stages:
     runId: arm32v7-$(Build.BuildId)
     brokerImageName: $(broker.image.arm32v7)
     brokerAddress: $(broker.address.arm32v7)
+    brokerSsh: $(broker.sshconnection.arm32v7)
     clientDop: 4 # the number of max threads that can execute mqtt-benchmark tool code simultaneously
 
   pool: $(pool.name)
@@ -40,13 +44,14 @@ stages:
     - template: templates/mqtt-perf-setup.yaml
     - template: templates/mqtt-perf-run.yaml
 
-  ################################################################################	
+################################################################################	
 - stage: linux_amd64
 ################################################################################	
   variables:
     runId: amd64-$(Build.BuildId)
     brokerImageName: $(broker.image.amd64)
     brokerAddress: $(broker.address.amd64)
+    brokerSsh: $(broker.sshconnection.amd64)
     clientDop: 4 # the number of max threads that can execute mqtt-benchmark tool code simultaneously
 
   pool: $(pool.name)
@@ -61,6 +66,7 @@ stages:
     runId: mosquitto-$(Build.BuildId)
     brokerImageName: $(broker.image.mosquitto)
     brokerAddress: $(broker.address.amd64)
+    brokerSsh: $(broker.sshconnection.amd64)
     clientDop: 4 # the number of max threads that can execute mqtt-benchmark tool code simultaneously
 
   pool: $(pool.name)
