--- a/builds/misc/templates/mqtt-perf-test-case.yaml
+++ b/builds/misc/templates/mqtt-perf-test-case.yaml
@@ -79,7 +79,7 @@ jobs:
   - task: SSH@0
     displayName: Stop broker
     inputs:
-      sshEndpoint: $(brokerSsh)
+      sshEndpoint: variables['brokerSsh']
       runOptions: commands
       commands: |
         docker kill $(docker ps -q) 2>/dev/null
@@ -87,7 +87,7 @@ jobs:
   - task: SSH@0
     displayName: Restart broker
     inputs:
-      sshEndpoint: $(brokerSsh)
+      sshEndpoint: variables['brokerSsh']
       runOptions: commands
       commands: |
         docker run -d -p 1883:1883 $(brokerImageName)
