--- a/builds/misc/templates/mqtt-perf-test-case.yaml
+++ b/builds/misc/templates/mqtt-perf-test-case.yaml
@@ -76,18 +76,41 @@ jobs:
   - "run_pub_${{ parameters['id'] }}"
   steps:
   - checkout: none
+
+  # AMD64 Cleanup
   - task: SSH@0
-    displayName: Stop broker
+    displayName: Stop broker AMD64
     inputs:
-      sshEndpoint: variables['brokerSsh']
+      sshEndpoint: iotedge-mqtt-perf-amd64-conn
       runOptions: commands
       commands: |
         docker kill $(docker ps -q) 2>/dev/null
     continueOnError: true 
+    condition: eq(variables['arch'], 'amd64')
   - task: SSH@0
-    displayName: Restart broker
+    displayName: Restart broker AMD64
     inputs:
-      sshEndpoint: variables['brokerSsh']
+      sshEndpoint: iotedge-mqtt-perf-amd64-conn
       runOptions: commands
       commands: |
         docker run -d -p 1883:1883 $(brokerImageName)
+    condition: eq(variables['arch'], 'amd64')
+
+  # ARM32 Cleanup
+  - task: SSH@0
+    displayName: Stop broker ARM32
+    inputs:
+      sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
+      runOptions: commands
+      commands: |
+        docker kill $(docker ps -q) 2>/dev/null
+    continueOnError: true 
+    condition: eq(variables['arch'], 'arm32v7')
+  - task: SSH@0
+    displayName: Restart broker ARM32
+    inputs:
+      sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
+      runOptions: commands
+      commands: |
+        docker run -d -p 1883:1883 $(brokerImageName)
+    condition: eq(variables['arch'], 'arm32v7')
