--- a/builds/ci/dotnet.yaml
+++ b/builds/ci/dotnet.yaml
@@ -72,17 +72,17 @@ jobs:
           echo "##vso[task.setvariable variable=PATH;]$AGENT_TOOLSDIRECTORY/kind:$PATH"
         displayName: Install Kubernetes cluster manager (kind)
         condition: succeededOrFailed()
-      - script: |
-          kind create cluster --name "edgy"
-          KUBECONFIG=$(kind get kubeconfig-path --name "edgy")
-          echo "##vso[task.setvariable variable=KUBECONFIG;]$KUBECONFIG"
-          echo "##vso[task.setvariable variable=USE_EXISTING_KUBERNETES_CLUSTER;]true"
-        displayName: Create Kubernetes cluster (edgy)
-        condition: succeededOrFailed()
-      - script: |
-          sudo -E bash -c './scripts/linux/runTests.sh "--filter $(test.filter)&Category=Kubernetes" $(Build.Configuration)'
-        displayName: Kubernetes Integration Tests
-        condition: succeededOrFailed()
+#      - script: |
+#          kind create cluster --name "edgy" --wait 5m
+#          KUBECONFIG=$(kind get kubeconfig-path --name "edgy")
+#          echo "##vso[task.setvariable variable=KUBECONFIG;]$KUBECONFIG"
+#          echo "##vso[task.setvariable variable=USE_EXISTING_KUBERNETES_CLUSTER;]true"
+#        displayName: Create Kubernetes cluster (edgy)
+#        condition: succeededOrFailed()
+#      - script: |
+#          sudo -E bash -c './scripts/linux/runTests.sh "--filter $(test.filter)&Category=Kubernetes" $(Build.Configuration)'
+#        displayName: Kubernetes Integration Tests
+#        condition: succeededOrFailed()
       - task: PublishTestResults@2
         displayName: Publish test results
         inputs:
