--- a/test/modules/ModuleLib/Microsoft.Azure.Devices.Edge.ModuleUtil.csproj
+++ b/test/modules/ModuleLib/Microsoft.Azure.Devices.Edge.ModuleUtil.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="2.0.0-david-forked" />
+    <PackageReference Include="Microsoft.Azure.Devices.Client" Version="2.0.0-david-forked-bear" />
   </ItemGroup>
 
   <ItemGroup>
