attempt to get codecov working

--- a/builds/checkin/dotnet.yaml
+++ b/builds/checkin/dotnet.yaml
@@ -122,9 +122,8 @@ jobs:
         inputs:
           targetType: 'inline'
           script: |
-            (New-Object System.Net.WebClient).DownloadFile("https://github.com/codecov/codecov-exe/releases/download/1.10.0/codecov-windows-x64.exe", (Join-Path $pwd "Codecov.zip"))
-            Expand-Archive .\Codecov.zip -DestinationPath .
-            .\Codecov\codecov.exe -t $(codecov.token) -n "dotnet checkin" -f "$(Agent.TempDirectory)/TestResults/*.trx"
+            dotnet tool install --global Codecov.Tool 
+            codecov -t $(codecov.token) -n "dotnet checkin" -f "$(Agent.TempDirectory)/TestResults/*.trx"
       - task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
         displayName: 'Check build quality'
         inputs:
