--- a/builds/misc/mqtt-perf.yaml
+++ b/builds/misc/mqtt-perf.yaml
@@ -34,7 +34,7 @@ stages:
 ################################################################################	
   variables:
     arch: arm32v7
-    runId: arm32v7-$(Build.BuildId)
+    runId: $(Build.BuildId)-arm32v7
     brokerImageName: $(broker.image.arm32v7)
     brokerAddress: $(broker.address.arm32v7)
     brokerSsh: $(broker.sshconnection.arm32v7)
@@ -50,7 +50,7 @@ stages:
 ################################################################################	
   variables:
     arch: amd64
-    runId: amd64-$(Build.BuildId)
+    runId: $(Build.BuildId)-amd64
     brokerImageName: $(broker.image.amd64)
     brokerAddress: $(broker.address.amd64)
     brokerSsh: $(broker.sshconnection.amd64)
@@ -66,7 +66,7 @@ stages:
 ################################################################################	
   variables:
     arch: amd64
-    runId: mosquitto-$(Build.BuildId)
+    runId: $(Build.BuildId)-mosquitto
     brokerImageName: $(broker.image.mosquitto)
     brokerAddress: $(broker.address.amd64)
     brokerSsh: $(broker.sshconnection.amd64)
