--- a/builds/misc/images-mqtt.yaml
+++ b/builds/misc/images-mqtt.yaml
@@ -21,15 +21,21 @@ jobs:
           command: login
           containerRegistry: iotedge-edgebuilds-acr
 
-      - task: Docker@2
-        displayName: Build amd64 image
-        inputs:
-          repository: $(imageName)
-          command: buildAndPush
-          containerRegistry: iotedge-edgebuilds-acr
-          Dockerfile: mqtt/docker/linux/amd64/Dockerfile
-          buildContext: mqtt/.
-          tags: $(Build.BuildId)-$(os)-$(arch)
+      # - task: Docker@2
+      #   displayName: Build amd64 image
+      #   inputs:
+      #     repository: $(imageName)
+      #     command: buildAndPush
+      #     containerRegistry: iotedge-edgebuilds-acr
+      #     Dockerfile: mqtt/docker/linux/amd64/Dockerfile
+      #     buildContext: mqtt/.
+      #     tags: $(Build.BuildId)-$(os)-$(arch)
+      
+      - script: |
+          echo $(imageName):$(Build.BuildId)-$(os)-$(arch) > image$(arch)
+      
+      - publish: image$(arch)
+        artifact: image$(arch)
 
 ################################################################################
   - job: linux_arm32
@@ -50,12 +56,18 @@ jobs:
           command: login
           containerRegistry: iotedge-edgebuilds-acr
 
-      - task: Docker@2
-        displayName: Build amd64 image
-        inputs:
-          repository: $(imageName)
-          command: buildAndPush
-          containerRegistry: iotedge-edgebuilds-acr
-          Dockerfile: mqtt/docker/linux/amd64/Dockerfile
-          buildContext: mqtt/.
-          tags: $(Build.BuildId)-$(os)-$(arch)
+      # - task: Docker@2
+      #   displayName: Build amd64 image
+      #   inputs:
+      #     repository: $(imageName)
+      #     command: buildAndPush
+      #     containerRegistry: iotedge-edgebuilds-acr
+      #     Dockerfile: mqtt/docker/linux/amd64/Dockerfile
+      #     buildContext: mqtt/.
+      #     tags: $(Build.BuildId)-$(os)-$(arch)
+
+      - script: |
+          echo $(imageName):$(Build.BuildId)-$(os)-$(arch) > image$(arch)
+      
+      - publish: image$(arch)
+        artifact: image$(arch)
