--- a/builds/misc/templates/mqtt-perf-setup.yaml
+++ b/builds/misc/templates/mqtt-perf-setup.yaml
@@ -30,7 +30,7 @@ jobs:
         sshEndpoint: iotedge-mqtt-perf-amd64-conn
         runOptions: commands        
         commands: |
-          docker kill $(docker ps -q) 2>/dev/null
+          docker stop mqtt-broker || docker rm mqtt-broker
       # ignore cleanup errors if no containers running
       continueOnError: true 
       condition: eq(variables['arch'], 'amd64')
@@ -43,7 +43,7 @@ jobs:
         commands: |
           echo "$(registry.password)" | docker login $(registry.address) --username $(registry.user) --password-stdin 2>/dev/null
           docker pull $(brokerImageName)
-          docker run -d -p 1883:1883 $(brokerImageName)
+          docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
           docker logout
       condition: eq(variables['arch'], 'amd64')
 
@@ -54,7 +54,7 @@ jobs:
         sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
         runOptions: commands        
         commands: |
-          docker kill $(docker ps -q) 2>/dev/null
+          docker stop mqtt-broker || docker rm mqtt-broker
       # ignore cleanup errors if no containers running
       continueOnError: true 
       condition: eq(variables['arch'], 'arm32v7')
@@ -67,7 +67,7 @@ jobs:
         commands: |
           echo "$(registry.password)" | docker login $(registry.address) --username $(registry.user) --password-stdin 2>/dev/null
           docker pull $(brokerImageName)
-          docker run -d -p 1883:1883 $(brokerImageName)
+          docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
           docker logout
       condition: eq(variables['arch'], 'arm32v7')
 
