--- a/builds/misc/templates/mqtt-perf-test-case.yaml
+++ b/builds/misc/templates/mqtt-perf-test-case.yaml
@@ -48,7 +48,6 @@ jobs:
       LOGANALYTICS_LOG_NAME: $(logs.logname)
     continueOnError: true 
 
-
 - job: "run_sub_${{ parameters['id'] }}"
   pool:
     name: $(pool.name)
@@ -84,16 +83,8 @@ jobs:
       sshEndpoint: iotedge-mqtt-perf-amd64-conn
       runOptions: commands
       commands: |
-        docker stop mqtt-broker || docker rm mqtt-broker
+        docker restart mqtt-broker
     continueOnError: true 
-    condition: eq(variables['arch'], 'amd64')
-  - task: SSH@0
-    displayName: Restart broker AMD64
-    inputs:
-      sshEndpoint: iotedge-mqtt-perf-amd64-conn
-      runOptions: commands
-      commands: |
-        docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
     condition: eq(variables['arch'], 'amd64')
 
   # ARM32 Cleanup
@@ -103,14 +94,6 @@ jobs:
       sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
       runOptions: commands
       commands: |
-        docker stop mqtt-broker || docker rm mqtt-broker
+        docker restart mqtt-broker
     continueOnError: true 
-    condition: eq(variables['arch'], 'arm32v7')
-  - task: SSH@0
-    displayName: Restart broker ARM32
-    inputs:
-      sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
-      runOptions: commands
-      commands: |
-        docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
     condition: eq(variables['arch'], 'arm32v7')
