--- a/builds/misc/templates/mqtt-perf-setup.yaml
+++ b/builds/misc/templates/mqtt-perf-setup.yaml
@@ -1,5 +1,5 @@
 # Template to set up test host (pull and start 'mqttd' container)
-# as well as publisher node and subscriber node (mqtt-benchmark tool writen in go).
+# as well as publisher node and subscriber node (mqtt-benchmark tool written in go).
 
 jobs:
 - job: setup_host
@@ -13,63 +13,36 @@ jobs:
     # get latest docker image name from mqtt images pipeline, 
     # if no image specified in the pipeline variables
     - download: images
-      artifact: image$(arch)
+      artifact: image-$(arch)
       displayName: Get MQTT broker image info
       condition: eq(variables['brokerImageName'], '')
 
     - script: |
-        brokerImageName=$(cat $(Pipeline.Workspace)/images/image$(arch)/image$(arch))
+        brokerImageName=$(cat $(Pipeline.Workspace)/images/image-$(arch)/artifactInfo.txt)
         echo "##vso[task.setvariable variable=brokerImageName;]$brokerImageName"
       displayName: 'Set broker image name variable'
       condition: eq(variables['brokerImageName'], '')
 
-    # AMD64 setup
     - task: SSH@0
       displayName: Cleanup running containers AMD64
       inputs:
-        sshEndpoint: iotedge-mqtt-perf-amd64-conn
+        sshEndpoint: ${{ variables.brokerSsh }} 
         runOptions: commands        
         commands: |
           docker stop mqtt-broker ; docker system prune -a
       # ignore cleanup errors if no containers running
       continueOnError: true 
-      condition: eq(variables['arch'], 'amd64')
 
     - task: SSH@0
       displayName: Install and Run docker image AMD64
       inputs:
-        sshEndpoint: iotedge-mqtt-perf-amd64-conn
+        sshEndpoint: ${{ variables.brokerSsh }} 
         runOptions: commands
         commands: |
           echo "$(registry.password)" | docker login $(registry.address) --username $(registry.user) --password-stdin 2>/dev/null
           docker pull $(brokerImageName)
           docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
           docker logout
-      condition: eq(variables['arch'], 'amd64')
-
-    # ARM32 setup
-    - task: SSH@0
-      displayName: Cleanup running containers ARM32
-      inputs:
-        sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
-        runOptions: commands        
-        commands: |
-          docker stop mqtt-broker ; docker rm mqtt-broker
-      # ignore cleanup errors if no containers running
-      continueOnError: true 
-      condition: eq(variables['arch'], 'arm32v7')
-
-    - task: SSH@0
-      displayName: Install and Run docker image ARM32
-      inputs:
-        sshEndpoint: iotedge-mqtt-perf-arm32v7-conn
-        runOptions: commands
-        commands: |
-          echo "$(registry.password)" | docker login $(registry.address) --username $(registry.user) --password-stdin 2>/dev/null
-          docker pull $(brokerImageName)
-          docker run -d -p 1883:1883 --name mqtt-broker $(brokerImageName)
-          docker logout
-      condition: eq(variables['arch'], 'arm32v7')
       
 - job: setup_pub
   pool:
